# decentralized_bets

./: .gitignore  Cargo.toml  README.md  angular.json  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/domain/: mod.rs
backend/src/domain/sports/: dtos.rs  mod.rs  services.rs  sports.rs
backend/src/domain/users/: mod.rs  repositories.rs  traits.rs  user.rs
backend/src/domain/users/dtos/: auth.rs
backend/src/domain/users/services/: auth.rs
backend/src/domain/users/tests/: auth.rs
backend/src/infrastructure/: mod.rs  secrets.rs
backend/src/infrastructure/database/: cache.rs  connection.rs  mod.rs
backend/src/infrastructure/database/migrations/: m20230715_000001_create_users_table.rs  mod.rs
backend/src/infrastructure/observability/: logs.rs  metrics.rs  mod.rs
backend/src/infrastructure/web/: authorization.rs  cache.rs  http_client.rs  middlewares.rs  mod.rs  oauth.rs  routes.rs
frontend/: package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: api.service.ts  app.routes.ts  logger.service.ts  wallet.service.ts
frontend/src/app/home/: home.component.css  home.component.html  home.component.ts
frontend/src/app/logger/: logger.component.css  logger.component.html  logger.component.spec.ts  logger.component.ts
frontend/src/app/navbar/: navbar.component.css  navbar.component.html  navbar.component.ts
onchain/solana/: Cargo.toml
onchain/solana/bets_handler/: Cargo.toml
onchain/solana/bets_handler/src/: lib.rs
src/: index.html
src/app/: app.component.spec.ts  app.component.ts
