[package]
name = "backend_boilerplate_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum               = { version = "0.7.5", features = ["macros", "json"] }
tower-http         = { version = "0.5",   features = ["cors"] }

# Async runtime
tokio              = { version = "1.37.0", features = ["full", "rt-multi-thread", "macros"] }

# ORM and migrations
sea-orm            = { version = "0.12.14", features = ["sqlx-postgres", "runtime-tokio", "macros", "chrono"] }
sea-orm-migration  = "0.12"

# SQLx for database interaction
sqlx               = { version = "0.7.4", features = ["postgres", "runtime-tokio", "migrate"] }

# HTTP client
reqwest            = { version = "0.12", features = ["json"] }

# Serialization y deserialización
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"

# Date and time handling
chrono             = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy            = "0.15"
once_cell          = "1.21.3"

# Logging y metrics
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-loki       = "0.2.6"
metrics            = "0.22"
metrics-exporter-prometheus = "0.13"
log                = "0.4"

# Security and authentication
jsonwebtoken       = "9.3.0"
magic-crypt        = "3.1.13"
validator          = { version = "0.16", features = ["derive"] }
uuid               = { version = "1.8", features = ["v4", "serde"] }
rand               = "0.8"
url                = "2.4"

# System information
sysinfo            = "0.30.5"

# PostgreSQL driver
tokio-postgres     = "0.7"

[dev-dependencies]
# Integration testing
sea-orm            = { version = "0.12.14", features = ["sqlx-sqlite", "runtime-tokio", "macros", "chrono"] }
sqlx               = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "macros"] }

# Testing
tokio              = { version = "1", features = ["macros", "rt"] }
tower              = { version = "0.4", features = ["util"] }
serde_json         = "1.0"
