[package]
name = "backend_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "json"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1.37.0", features = ["full", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
moka = { version = "0.12.10", features = ["future", "sync"] }
once_cell = "1.21.3"

