[package]
name = "bets_handler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
incremental = false

[dependencies]
solana-program = "1.18.0"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
borsh = "0.10.3"
